# Demens

./: Cargo.toml  DESIGN.md  README.md  doc
assets/: DefaultBuilding.blend  DefaultBuilding.mtl  DefaultCharacter.blend  DefaultCharacter.mtl  Gabriel.blend  Gabriel.blend1
assets/base/: armory.yml  town_hall.yml
assets/characters/: coilgun.yml
assets/groups/: coilgun_team.yml
assets/settings/: global_settings.yml  user.cfg  user.yml
assets/settings/bases/: enemy01.yml
src/: init.rs  lib.rs  main.rs  team.rs
src/base/: mod.rs
src/entity/: mod.rs
src/entity/character/: mod.rs
src/entity/groups/: mod.rs
src/entity/worldobject/: building.rs  mod.rs
src/game_manager/: game_controller.rs  mod.rs
src/view/: mod.rs
state/: .conf  .save  doc
tests/: basics.rs
