[package]
edition = "2021"
name = "demens3d"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
terraformer3d = { git = "https://github.com/SpectralProject/terraformer-3d.git", branch = "main" }
blend = "*"
